<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fakemoneyscanner_ui_non2"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/oneksecu"
            android:id="@+id/oneksecu"
            android:layout_marginTop="90dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="55dp">
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/oneksecu"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/lin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/emboss" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/serial" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/fibers" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/watermark" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/see_through" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/concealed" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/thread" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ovd" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ovi" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/emboss_text"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/sn_text"
                    android:textColor="@android:color/black"
                    android:textSize="10sp"
                    android:textAlignment="textStart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/fibers_text"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/water_text"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/see_through_text"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/concealed_text"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/thread_text"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/ovd_text"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/ovi_text"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />
            </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>